--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,32 @@
+body{
+    background-color: white;
+    
+}
 .navbar{
     position: fixed;
     z-index: 3;
+    background: linear-gradient(45deg, black, transparent);
+}
+.container-fluid{
+    justify-content: flex-end!important;
+}
+.navbar-brand{
+    position: relative;
+    right: 600px;
+    color: #FFEBCD;
+    font-size: x-large;
+    font-style: oblique;
+
 }
 .movies{
     position: relative;
-    top: 50px;
+    top: 80px;
 }
 .movie{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: 30px;
+    margin-top: 40px;
 }
 .movieimg{
     width: 33%;
@@ -39,7 +55,8 @@ a{
     text-decoration: none;
 }
 .add{
-    margin-left: 800px;
+    margin: 20px;
+    
 }
 .heading{
     margin-top: 100px;
@@ -76,4 +93,25 @@ a{
     max-height: 70px;
     word-wrap: break-word;
     overflow: hidden;
+}
+.read{
+    width: 107px;
+}
+
+.login-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 790px;
+    background-color: #2c3639;
+}
+.login-content{
+    border: 2px solid grey;
+    padding: 50px;
+    box-shadow: 5px 10px 8px #888888;
+    background-color: white;
+}
+.text-center{
+    margin-top: 100px;
 }
